Frontend: main features

--- a/frontend/locales/fr/common.json
+++ b/frontend/locales/fr/common.json
@@ -1,3 +1,7 @@
 {
-    
+    "cancel": "Annuler",
+    "select-required": "Choisis une option",
+    "close": "Fermer",
+    "with": "Avec",
+    "without": "Sans"
 }
