--- a/frontend/locales/fr/order.json
+++ b/frontend/locales/fr/order.json
@@ -5,5 +5,6 @@
     "choose-your-tonic": "Choisis ton tonique",
     "display-cart": "Affiche ton panier",
     "your-cart": "Ton panier",
-    "send-order": "Envoyer la commande"
+    "send-order": "Envoyer la commande",
+    "item-not-available": "Désolé, cet article n'est plus dispo 😓"
 }
