Frontend: basic auth authentication

--- a/frontend/locales/fr/admin.json
+++ b/frontend/locales/fr/admin.json
@@ -1,3 +1,7 @@
 {
-    
+    "login-title": "Connecte-toi à l'écran d'administration",
+    "login-username": "Nom d'utilisateur",
+    "login-password": "Mot de passe",
+    "login-submit": "OK",
+    "login-incorrect": "Le nom d'utilisateur ou le mot de passe est incorrect"
 }
