Frontend: show notification for client's orders status

--- a/frontend/locales/fr/common.json
+++ b/frontend/locales/fr/common.json
@@ -3,5 +3,6 @@
     "select-required": "Choisis une option",
     "close": "Fermer",
     "with": "Avec",
-    "without": "Sans"
+    "without": "Sans",
+    "order-number": "Commande № "
 }
