--- a/frontend/locales/fr/admin.json
+++ b/frontend/locales/fr/admin.json
@@ -3,6 +3,5 @@
     "login-username": "Nom d'utilisateur",
     "login-password": "Mot de passe",
     "login-submit": "OK",
-    "login-incorrect": "Le nom d'utilisateur ou le mot de passe est incorrect",
-    "order-number": "Commande № "
+    "login-incorrect": "Le nom d'utilisateur ou le mot de passe est incorrect"
 }
