Add options translations to locales

--- a/frontend/locales/fr/order.json
+++ b/frontend/locales/fr/order.json
@@ -3,6 +3,8 @@
     "add-to-cart": "Ajouter au panier",
     "choose-your-gin": "Choisis ton gin",
     "choose-your-tonic": "Choisis ton tonique",
+    "choose-your-cafe": "Choisis ton café",
+    "choose-your-sirop-cafe": "Choisis ton sirop",
     "display-cart": "Affiche ton panier",
     "your-cart": "Ton panier",
     "send-order": "Envoyer la commande",
